--- a/public/css/style.css
+++ b/public/css/style.css
@@ -319,7 +319,6 @@ body {
     color: white;
     background: #1E90FF;
     border: 2px solid #1873cc;
-    border-radius: 5px;
     cursor: pointer;
     outline: none;
 }
@@ -329,6 +328,49 @@ body {
 }
 
 /*-- TODO: POPRAWIĆ FLEXA > CHILDY */
+
+
+/* -------------- SELECTS ------------------------*/
+.form-label {
+    font-weight: 600;
+    padding: 1em 0;
+}
+
+.form-select {
+    -webkit-appearance: none;
+    width: 100%;
+    max-width: 300px;
+
+    /* Fix for safari/ios */
+    min-height: calc(0.9em + (0.8em * 2) + 0.6em);
+
+    padding: 0.8em;
+    font-size: 0.9em;
+
+    outline: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background: #f9f9f9;
+    transition: background 0.5s, border-color 0.5s, color 0.5s;
+
+}
+
+.form-select:focus {
+    background: #ffffff;
+}
+
+.form-select::placeholder {
+    color: #bbbbbb;
+}
+
+.form-select--small {
+    max-width: 200px;
+}
+
+.container-select {
+    padding-bottom: 15px;
+}
+
 
 /* -------------- LOGIN FORM -------------------- */
 
