--- a/templates/admin_panel/clinic/index.html.twig
+++ b/templates/admin_panel/clinic/index.html.twig
@@ -16,19 +16,36 @@
         <tr>
             <th>Id poradni</th>
             <th>Nazwa</th>
-{#            <th>Akcja</th>#}
+            {% if is_granted('ROLE_ADMIN') %}
+                <th>Akcja</th>
+            {% endif %}
+
         </tr>
     {% for c in clinics %}
         <tr>
             <td>{{ c.id }}</td>
             <td><a class="link-blue" href="{{ path('admin.unit_show', {id: c.id}) }}">{{ c.name }}</a></td>
-{#            <td>#}
-{#                <a class="delete" href="{{ path('admin.poradnia_delete', {id: clinic.id}) }}">Usuń</a>#}
-{#            </td>#}
+            <td>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a class="delete" href="{{ path('admin.clinic_delete', {id: c.id}) }}">Usuń</a>
+                {% endif %}
+            </td>
         </tr>
     {% endfor %}
     </table>
-    <a href="{{ path('admin.clinic_add') }}">Dodaj poradnie</a>
+{#    <a href="{{ path('admin.clinic_add') }}">Dodaj poradnie</a>#}
+    <button class="form-btn" id="toggleBtn">Dodaj poradnie</button>
+    {{ include('admin_panel/clinic/_form.html.twig') }}
+
+
+    <script>
+        $(document).ready(function() {
+            $("#toggleBtn").click(function () {
+                $(".form.hidden").slideDown();
+            });
+        });
+
+    </script>
 
 {% endblock content %}
 
