--- a/templates/admin_panel/users/user_profile.html.twig
+++ b/templates/admin_panel/users/user_profile.html.twig
@@ -9,7 +9,7 @@
             </div>
         {% endfor %}
     {% endfor %}
-    <h1>{{ user.imie ~ ' ' ~ user.nazwisko }}</h1>
+    <h1>{{ user.name ~ ' ' ~ user.lastName }}</h1>
     {% if user.roles[0] == "ROLE_USER" %}
         <p>Użytkownik</p>
     {% elseif user.roles[0] == "ROLE_ADMIN" %}
@@ -19,13 +19,13 @@
     {% endif %}
      <p>{{ user.id }}</p>
     <p>{{ user.email }}</p>
-    <p>{{ user.imie ~ ' ' ~ user.nazwisko}}</p>
+    <p>{{ user.name ~ ' ' ~ user.lastName}}</p>
     <p>{{ user.PESEL }}</p>
-    <p>{{ user.telefon }}</p>
-    <p>{{ user.adresZamieszkania }}</p>
-    <p>{{ user.miasto ~ ' ' ~ user.kodPocztowy }}</p>
-    <p>{{ user.wojewodztwo }}</p>
-    <p>{{ user.dataUrodzenia|date("d/m/Y") }}</p>
-    <p>{{ user.plec }}</p>
+    <p>{{ user.numPhone }}</p>
+    <p>{{ user.address }}</p>
+{#    <p>{{ user.city ~ ' ' ~ user.postCode }}</p>#}
+    <p>{{ user.voivodeship }}</p>
+    <p>{{ user.birthday|date("d/m/Y") }}</p>
+    <p>{{ user.gender }}</p>
     <p>{{ user.roles[0] }}</p>
 {% endblock %}
