--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,9 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
         {% endblock %}
         {% block javascripts %}
-            <script
-                src="https://code.jquery.com/jquery-3.5.0.slim.min.js"
-                integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs="
-                crossorigin="anonymous"></script>
+            <script src="{{ asset('js/jquery.js') }}"></script>
             <script src="{{ asset('js/moment.js') }}"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
