--- a/templates/visit/choice.html.twig
+++ b/templates/visit/choice.html.twig
@@ -8,9 +8,11 @@
     <h1>{{ clinic.name }}</h1>
     {% for u in unit %}
     <div class="clinic-card">
+        {% if u.status == 1 %}
             <a href="{{path('visit_terms', {'id': u.unit})}}" hidden></a>
             {{ u.name ~ ' ' ~ u.last_name }} <br>
             {{ render(controller('App\\Controller\\VisitController::work_time_show', {'idClinic': clinic.id, 'idUnit':u.unit})) }}
+        {% endif %}
     </div>
     {% endfor %}
 </div>
