--- a/templates/visit/reservation.html.twig
+++ b/templates/visit/reservation.html.twig
@@ -13,7 +13,7 @@
     <h2>{{doctor.name ~ ' ' ~ doctor.lastName}}</h2>
     <h2>Data</h2>
     <p>{{start|date("Y-m-d") ~ ' ' ~ nameOfDay(start|date('w'))}}</p>
-    <h2>Godzina rozpoczęcia</h2>
+    <h2>Przewidywana godzina rozpoczęcia</h2>
     <p>{{start|date("H:i")}}</p>
     <h2>Przewidywana godzina zakończenia</h2>
     <p>{{end|date("H:i")}}</p>
