--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Przychodnia rejonowa{% endblock %}
 
 {% block body %}
-    <h1>Strona główna przychodni</h1>
+
+    <div class="container">
+        <h1>Strona główna przychodni</h1>
+    </div>
 
 {% endblock %}
