--- a/templates/visit/terms.html.twig
+++ b/templates/visit/terms.html.twig
@@ -6,7 +6,7 @@
 <div class="container">
     <div id="calendar-holder"></div>
 </div>
-
+<!-- TODO: POPRAWIĆ MOŻLIWOŚĆ REZERWACJI -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             var calendarEl = document.getElementById('calendar-holder');
