--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!{% endblock %}
+{% block title %} {{ app.user.username }} {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/przychodnia/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/przychodnia/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
+<div class="container">
+    <h1>{{ app.user.name ~ ' ' ~ app.user.lastName }} </h1>
+    <span><b>Konto utworzono: </b>{{ app.user.createdAt|date('d-m-Y H:i') }}</span>
+    <p><b>Email: </b> {{ app.user.email }}</p>
+    <p><b>Data urodzenia: </b> {{ app.user.birthday|date('d-m-Y') }}</p>
+    <p><b>PESEL: </b> {{ app.user.PESEL }}</p>
+    <p><b>Numer telefonu: </b> {{ app.user.numPhone }}</p>
+    <p><b>Adres zamieszkania: </b> {{ app.user.address ~ ', ' ~ app.user.city ~ ' ' ~ app.user.postCode }}</p>
+{#    <p><b>Wiek: </b></p>#}
+    <p></p>
 </div>
 {% endblock %}
