--- a/templates/visit/index.html.twig
+++ b/templates/visit/index.html.twig
@@ -12,19 +12,22 @@
             </div>
         {% endfor %}
     {% endfor %}
-    
+    <h1>Poradnie lekarskie</h1>
     <div class="clinics-container">
             {% for c in clinics %}
                 <div class="clinic-card">
-                    <div class="clinics-item">
+                    <div class="clinic-item">
                         <h3>{{ c.name }}<a href="{{ path('visit_choose', {'id': c.id}) }}" hidden></a></h3>
                         <ul>
-                        {% for u in units %}
-                            {% if u.status == 1 %}
-                                {% if c.name == u.name %}
-                                    <li>{{ u.d_name ~ ' ' ~ u.last_name}}</li>
-                                {% endif %}
+                            {% if units|length == 0 %}
+                                <p><b>Aktualnie żaden lekarz nie przyjmuje w tej poradni</b></p>
                             {% endif %}
+                            {% for u in units %}
+                                {% if u.status == 1 %}
+                                    {% if c.name == u.name %}
+                                        <li>{{ u.d_name ~ ' ' ~ u.last_name }} &ndash; {{ '  lekarz ' ~ u.spec|lower }}</li>
+                                    {% endif %}
+                                {% endif %}
                         {% endfor %}
                         </ul>
                     </div>
@@ -32,6 +35,7 @@
             {% endfor %}
     </div>
 </div>
+
 
 <script>
     $("ul:not(:has(li))").append($("<p>Aktualnie żaden lekarz nie przyjmuje w tej poradni.</p>"))
