--- a/templates/admin_panel/doctor/index.html.twig
+++ b/templates/admin_panel/doctor/index.html.twig
@@ -34,6 +34,6 @@
         </tr>
     {% endfor %}
     </table>
-    <a href="{{ path('admin.doctor_add') }}">Dodaj lekarza</a>
+    <a class="link" href="{{ path('admin.doctor_add') }}">Dodaj lekarza</a>
 
 {% endblock %}
