--- a/templates/admin_panel/unit/_add.html.twig
+++ b/templates/admin_panel/unit/_add.html.twig
@@ -28,5 +28,5 @@
                </tr>
           {% endfor %}
      </table>
-     <a href="{{ path('admin.doctor_add') }}">Dodaj nowego lekarza</a>
+     <a class="link" href="{{ path('admin.doctor_add') }}">Dodaj nowego lekarza</a>
 {% endblock content %}
