--- a/templates/admin_panel/unit/show.html.twig
+++ b/templates/admin_panel/unit/show.html.twig
@@ -37,5 +37,5 @@
     {% endfor %}
     </table>
 
-    <a href="{{ path('admin.unit_add', {'idClinic': clinic.id}) }} ">Dodaj lekarza do poradni</a>
+    <a class="link" href="{{ path('admin.unit_add', {'idClinic': clinic.id}) }} ">Dodaj lekarza do poradni</a>
 {% endblock content %}
