--- a/templates/visit/reservation.html.twig
+++ b/templates/visit/reservation.html.twig
@@ -8,7 +8,7 @@
             </div>
         {% endfor %}
     {% endfor %}
-    <div class="info-container">
+    <div class="flash-info">
         <p>
             Upewnij się, że podana data i godzina wizyty są prawidłowe. W razie konieczności, możesz dokonać <a class="link" href="{{ path('visit_terms', {'id': id }) }}">wyboru </a>jeszcze raz.
         </p>
