--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,11 @@ body {
 
 }
 
+.flash-info{
+    padding: 5px 15px;
+    background: #d5e7ff;
+}
+
 /* ---------------- MAIN CONTAINER ----------------- */
 @media only screen and (max-width: 768px) {
     .container {
@@ -446,6 +451,15 @@ body {
     color: darkblue;
 }
 
+.link-green {
+    text-decoration: none;
+    color: rgba(0, 116, 12, 0.68);
+}
+.link-green:hover {
+    transition: 0.5s;
+    color: rgba(2, 54, 0, 0.68);
+}
+
 .link-btn {
     font-weight: 600;
     text-decoration: none;
@@ -465,7 +479,3 @@ body {
     transition: background 0.5s, border-color 0.5s, color 0.5s;
 }
 
-.info-container{
-    padding: 5px 15px;
-    background: #d5e7ff;
-}
