--- a/templates/admin_panel/users/users.html.twig
+++ b/templates/admin_panel/users/users.html.twig
@@ -30,11 +30,12 @@
             <td>{{ user.lastName }}</td>
             <td>{{ roleFormat(user.roles[0]) }}</td>
             <td><a class="add" href="{{ path('admin.user_edit', {id:user.id}) }}">Edytuj</a></td>
-            <td><a class="delete" href="{{ path('admin.user_delete', {id:user.id}) }}">Usuń</a></td>
+{#            <td><a class="delete" href="{{ path('admin.user_delete', {id:user.id}) }}">Usuń</a></td>#}
+            <td></td>
         </tr>
         {% endfor %}
     </table>
 
-    <a href="{{ path('admin.user_add') }}">Dodaj użytkownika</a>
+    <a class="link" href="{{ path('admin.user_add') }}">Dodaj użytkownika</a>
 
 {% endblock %}
