zmiana snake_case na camelCase w obiektach encji

--- a/templates/admin_panel/unit/_add.html.twig
+++ b/templates/admin_panel/unit/_add.html.twig
@@ -19,8 +19,8 @@
           </tr>
           {% for d in doctors %}
                <tr>
-                    <td>{{ d.num_pwz }}</td>
-                    <td>{{ d.last_name ~ ' ' ~ d.name }}</td>
+                    <td>{{ d.numPwz }}</td>
+                    <td>{{ d.lastName ~ ' ' ~ d.name }}</td>
                     <td>{{ d.spec }}</td>
                     <td>
                          <a class="add" href="{{ path('admin.unit_create', {'idDoctor': d.id, 'idClinic': clinic.id}) }}">Dodaj</a>
