--- a/templates/admin_panel/unit/index.html.twig
+++ b/templates/admin_panel/unit/index.html.twig
@@ -24,8 +24,8 @@
     {% for u in unit %}
         <td>{{ u.unit }}</td>
         <td>{{ u.id }}</td>
-        <td>{{ u.num_pwz }}</td>
-        <td>{{ u.last_name ~ ' ' ~ u.name }}</td>
+        <td>{{ u.numPwz }}</td>
+        <td>{{ u.lastName ~ ' ' ~ u.name }}</td>
         <td>{{ u.spec }}</td>
         <td>{{ u.clinicName }}</td>
         <td>
