--- a/templates/admin_panel/unit/show.html.twig
+++ b/templates/admin_panel/unit/show.html.twig
@@ -24,8 +24,8 @@
     {% for doctor in doctors %}
         <td>{{ doctor.unit }}</td>
         <td>{{ doctor.id }}</td>
-        <td>{{ doctor.num_pwz }}</td>
-        <td>{{ doctor.last_name ~ ' ' ~ doctor.name }}</td>
+        <td>{{ doctor.numPwz }}</td>
+        <td>{{ doctor.lastName ~ ' ' ~ doctor.name }}</td>
         <td>{{ doctor.spec }}</td>
         <td>
             <a class="link-blue" href="{{ path('admin.work_time', {'id': doctor.unit}) }}">Czas pracy</a>
