--- a/templates/admin_panel/visit/_datatable.html.twig
+++ b/templates/admin_panel/visit/_datatable.html.twig
@@ -22,7 +22,7 @@
             <td>{{ v.d_name ~ ' ' ~ v.d_lastName }}</td>
             <td>{{ v.u_name ~ ' ' ~ v.u_lastName }}</td>
             <td>{{ v.email }}</td>
-            <td>{{ v.num_phone }}</td>
+            <td>{{ v.numPhone }}</td>
             <td>{{ v.start|date('d-m-Y') }}</td>
             <td>{{ v.start|date('H:i') }}</td>
             <td>{{ v.end|date('H:i') }}</td>
