--- a/templates/admin_panel/users/_add.html.twig
+++ b/templates/admin_panel/users/_add.html.twig
@@ -39,13 +39,13 @@
             <span class="form-error">{{ form_errors(form.name) }}</span>
         </div>
         <div class="form-item-col">
-            {{ form_label(form.last_name, 'Nazwisko', {'attr': {'class' : 'form-label'}} ) }}
-            {% if form_errors(form.last_name) %}
-                {{ form_widget(form.last_name, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+            {{ form_label(form.lastName, 'Nazwisko', {'attr': {'class' : 'form-label'}} ) }}
+            {% if form_errors(form.lastName) %}
+                {{ form_widget(form.lastName, {'attr': {'class' : 'form-input form-input--error'}} ) }}
             {% else %}
-                {{ form_widget(form.last_name, {'attr': {'class' : 'form-input'}} ) }}
+                {{ form_widget(form.lastName, {'attr': {'class' : 'form-input'}} ) }}
             {% endif %}
-            <span class="form-error">{{ form_errors(form.last_name) }}</span>
+            <span class="form-error">{{ form_errors(form.lastName) }}</span>
         </div>
     </div>
     <div class="form-item-col">
