--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -5,6 +5,13 @@
 {% block body %}
 
     <div class="container">
+        {% for label, messages in app.flashes(['success', 'fail']) %}
+            {% for message in messages %}
+                <div class="flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
         <h1>Strona główna przychodni</h1>
     </div>
 
