--- a/templates/admin_panel/users/users.html.twig
+++ b/templates/admin_panel/users/users.html.twig
@@ -20,8 +20,9 @@
             <th>Imie</th>
             <th>Nazwisko</th>
             <th>Rola</th>
-            <th colspan="2">Akcje</th>
+            <th colspan="3">Akcje</th>
         </tr>
+{#        {{ dump(users) }}#}
         {% for user in users %}
         <tr>
             <td>{{ user.id }}</td>
@@ -30,12 +31,10 @@
             <td>{{ user.lastName }}</td>
             <td>{{ roleFormat(user.roles[0]) }}</td>
             <td><a class="add" href="{{ path('admin.user_edit', {id:user.id}) }}">Edytuj</a></td>
-{#            <td><a class="delete" href="{{ path('admin.user_delete', {id:user.id}) }}">Usuń</a></td>#}
+            <td><a class="delete" href="{{ path('admin.user_delete', {id:user.id}) }}">Usuń</a></td>
             <td></td>
         </tr>
         {% endfor %}
     </table>
-
     <a class="link" href="{{ path('admin.user_add') }}">Dodaj użytkownika</a>
-
 {% endblock %}
