--- a/templates/admin_panel/users/_form.html.twig
+++ b/templates/admin_panel/users/_form.html.twig
@@ -1,3 +1,5 @@
+
+
     {{ form_start(form, {'attr': {'class': 'form', 'autocomplete':'off'}}) }}
 
     <div class="form-item-col">
@@ -56,5 +58,5 @@
         <span class="form-error">{{ form_errors(form.roles) }}</span>
     </div>
 
-    <button class="form-btn">Edytuj</button>
+    <button class="form-btn">Zatwierdź</button>
     {{ form_end(form) }}
