--- a/public/css/style.css
+++ b/public/css/style.css
@@ -595,14 +595,14 @@ body {
   z-index: 1;
   background-color: #111;
   overflow-x: hidden;
-  padding-top: 20px;
+  padding-top: 3em;
   -webkit-transition: 0.7s;
   transition: 0.7s;
 }
 
 /* The navigation menu links */
 .sidebar a {
-  padding: 6px 8px 6px 16px;
+  padding: 1em;
   text-decoration: none;
   font-size: 1em;
   color: #FFFFFF;
