--- a/public/scss/components/_sidebar.scss
+++ b/public/scss/components/_sidebar.scss
@@ -7,13 +7,13 @@
     z-index: 1;
     background-color: #111;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 3em;
     transition: 0.7s;
   }
 
 /* The navigation menu links */
 .sidebar a {
-    padding: 6px 8px 6px 16px;
+    padding: 1em;
     text-decoration: none;
     font-size: 1em;
     color: #FFFFFF;
