--- a/templates/admin_panel/users/users.html.twig
+++ b/templates/admin_panel/users/users.html.twig
@@ -19,7 +19,7 @@
             <th>Użytkownik</th>
             <th>Rola</th>
             <th>Status</th>
-            <th colspan="4">Akcje</th>
+            <th colspan="3"></th>
         </tr>
 {#        {{ dump(users) }}#}
         {% for user in users %}
@@ -29,7 +29,6 @@
             <td>{{ user.roles[0]|roleFormat }}</td>
             <td>{{ user.status|statusFormat }}</td>
             <td><a class="add" href="{{ path('admin.user_edit', {id: user.id}) }}">Edytuj</a></td>
-            <td><a class="delete" href="{{ path('admin.user_delete', {id: user.id}) }}">Usuń</a></td>
             <td></td>
         </tr>
        
